@@ -1,3 +1,7 @@
+2005-12-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b48
+
+ * Fix: Bug #1281140, charset in emails.
+
 2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b47
 
  * Fix: Zlrofix JS. reverted to former JS and fixed it via PHP.
